fix: don't let tables break layout on small screens
Closes: https://github.com/wincent/masochist/issues/143

--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -47,6 +47,10 @@ h1 a {
   width: 12px;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .prerendered img {
   max-width: 100%;
 }
